--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="https://id.twitch.tv/oauth2/authorize?&client_id=afay0ef5g5bs1wwkgd3zkomosgs68p&redirect_uri=badchromer.github.io&response_type=code&scope=channel:manage:redemptions+channel:read:redemptions+channel:read:vips+channel:manage:vips">Connect with Twitch</a>
+<a href="https://id.twitch.tv/oauth2/authorize?&client_id=afay0ef5g5bs1wwkgd3zkomosgs68p&redirect_uri=https://badchromer.github.io/&response_type=code&scope=channel:manage:redemptions+channel:read:redemptions+channel:read:vips+channel:manage:vips">Connect with Twitch</a>
