--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<a href="https://id.twitch.tv/oauth2/authorize?&client_id=afay0ef5g5bs1wwkgd3zkomosgs68p&redirect_uri=https://badchromer.github.io/&response_type=code&scope=channel:manage:redemptions+channel:read:redemptions+channel:read:vips+channel:manage:vips" class="myButton">Connect with Twitch</a>
+<!DOCTYPE html>
+<head>
+    <title>Bot</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <a href="https://id.twitch.tv/oauth2/authorize?&client_id=afay0ef5g5bs1wwkgd3zkomosgs68p&redirect_uri=https://badchromer.github.io/&response_type=code&scope=channel:manage:redemptions+channel:read:redemptions+channel:read:vips+channel:manage:vips" class="myButton">Connect with Twitch</a>
+</body>
